# pysigma-backend-datadog

./: .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-3rdparty.csv  NOTICE.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
dd_sigma/: __init__.py
dd_sigma/backends/datadog/: __init__.py  datadog_backend.py
dd_sigma/pipelines/datadog/: __init__.py  datadog.py
scripts/: local_pysigma_dd_conversion.py
sigma/backends/datadog/: __init__.py  datadog.py  datadog_backend.py
sigma/pipelines/datadog/: __init__.py  datadog.py  datadog_pipeline.py
tests/: test_backend_datadog.py  test_pipelines_datadog.py
