[tool.poetry]
name = "pySigma-backend-datadog"
version = "0.1.0"
description = "pySigma Datadog backend"
readme = "README.md"
authors = ["Datadog Cloud SIEM <team-cloudsiembackend@datadoghq.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/DatadogHQ/pySigma-backend-datadog"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
coverage = "^7.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

