[tool.poetry]
name = "pySigma-backend-datadog"
version = "0.3.1"
description = "pySigma Datadog backend"
readme = "README.md"
authors = ["Datadog Cloud SIEM <team-cloudsiembackend@datadoghq.com>"]
license = "LGPL-3.0-only"
repository = "https://github.com/DatadogHQ/pySigma-backend-datadog"
packages = [
    { include = "sigma" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.11"

[tool.poetry.dev-dependencies]
black = "^24.1"
defusedxml = "^0.7"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4"
pytest = "^8.0"
pytest-cov = "^4.1"

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"

